--- a/TradeHubGui/Views/StrategyRunnerView.xaml
+++ b/TradeHubGui/Views/StrategyRunnerView.xaml
@@ -203,7 +203,7 @@
                                     </DataTemplate>
                                 </DataGridTemplateColumn.CellTemplate>
                             </DataGridTemplateColumn>
-                            <DataGridTemplateColumn Header="Actions" Width="152" IsReadOnly="True">
+                            <DataGridTemplateColumn Header="Actions" Width="100" IsReadOnly="True">
                                 <DataGridTemplateColumn.CellTemplate>
                                     <DataTemplate>
                                         <StackPanel Grid.Column="3" Orientation="Horizontal" HorizontalAlignment="Right">
@@ -231,26 +231,6 @@
                                                     Command="{Binding DataContext.DeleteInstanceCommand, RelativeSource={RelativeSource AncestorType=DataGrid}}">
                                                 <Image Width="12" Height="12" Margin="2" Source="{StaticResource imgDelete}" UseLayoutRounding="True"/>
                                             </Button>
-
-                                            <!--<Button VerticalAlignment="Center" HorizontalAlignment="Center"
-                                                    Focusable="False" ToolTip="Right click for options"
-                                                    Tag="{Binding RelativeSource={RelativeSource Mode=FindAncestor, AncestorType={x:Type DataGrid}}}">
-                                                <Image Width="12" Height="12" Margin="2,0,0,0" Source="{StaticResource imgOptions}" UseLayoutRounding="True"/>
-                                                <Button.ContextMenu>
-                                                    <ContextMenu Focusable="False" Background="Transparent">
-                                                        <MenuItem Header="Export" HorizontalAlignment="Center" VerticalAlignment="Center"
-                                                                  FlowDirection="LeftToRight" ToolTip="Export local data"
-                                                                  IsEnabled="{Binding Status, Converter={StaticResource StatusToBool}, ConverterParameter=Invert}"
-                                                                  Command="{Binding Path=PlacementTarget.Tag.DataContext.ExportInstanceDataCommand,
-                                                                            RelativeSource={RelativeSource Mode=FindAncestor, AncestorType=ContextMenu}}">
-                                                            <MenuItem.Icon>
-                                                                <Image Width="12" Height="12" Margin="2,0,0,0" Source="{StaticResource imgExport}" UseLayoutRounding="True"/>
-                                                            </MenuItem.Icon>
-                                                        </MenuItem>
-                                                    </ContextMenu>
-                                                </Button.ContextMenu>
-                                            </Button>-->
-                                            
                                         </StackPanel>
                                     </DataTemplate>
                                 </DataGridTemplateColumn.CellTemplate>
@@ -280,8 +260,8 @@
                                                 Margin="0,0,6,0" IsEnabled="True"
                                                 Command="{Binding DataContext.NotificationOptionsCommand, RelativeSource={RelativeSource AncestorType=DataGrid}}">
                                             <StackPanel Orientation="Horizontal">
-                                                <Image Width="12" Height="12" Margin="2,0,4,0"
-                                                       Source="{StaticResource imgExport}" UseLayoutRounding="True" />
+                                                <Image Width="12" Height="12" Margin="2,1,4,0"
+                                                       Source="{StaticResource imgNotification}" UseLayoutRounding="True" />
                                                 <TextBlock Text="Notify" Margin="0,0,4,0" />
                                             </StackPanel>
                                         </Button>
