--- a/TradeHubGui/Views/StrategyRunnerView.xaml
+++ b/TradeHubGui/Views/StrategyRunnerView.xaml
@@ -333,6 +333,14 @@
                     <DockPanel DockPanel.Dock="Top" Margin="10,0" >
                         <TextBlock Text="ORDERS" Style="{StaticResource SubHeaderTextBlockStyle}" Margin="0,0,6,0"/>
                         <TextBlock Text="{Binding Path=SelectedExecutionDetails.Key}" Style="{StaticResource SubHeaderTextBlockStyle}" FontWeight="SemiBold"/>
+
+                        <Button  MinWidth="75" IsEnabled="True" Focusable="False" Margin="0,0,0,0" HorizontalAlignment="Right" VerticalAlignment="Top"
+                        Command="{Binding ExportExecutionsCommand}">
+                            <StackPanel Orientation="Horizontal">
+                                <Image Width="14" Height="14" Margin="0,0,4,0" Source="{StaticResource imgExport}" />
+                                <TextBlock Text="Export" />
+                            </StackPanel>
+                        </Button>
                     </DockPanel>
 
                     <DataGrid x:Name="OrdersDataGrid" Margin="10"
