--- a/TradeHubGui/Views/OrdersView.xaml
+++ b/TradeHubGui/Views/OrdersView.xaml
@@ -17,7 +17,7 @@
 
     <Grid x:Name="ContentGrid">
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="0.4*" MinWidth="300"/>
+            <ColumnDefinition Width="0.35*" MinWidth="300"/>
             <ColumnDefinition Width="Auto"/>
             <ColumnDefinition Width="0.7*" MinWidth="300"/>
         </Grid.ColumnDefinitions>
@@ -127,7 +127,7 @@
                             <DataGridTemplateColumn Header="Actions" Width="Auto" SortMemberPath="Status">
                                 <DataGridTemplateColumn.CellTemplate>
                                     <DataTemplate>
-                                        <Button Content="Close" Height="20" 
+                                        <Button Content="CLOSE" Height="20" 
                                                 Command="{Binding DataContext.ClosePositionCommand, RelativeSource={RelativeSource AncestorType=DataGrid}}"
                                                 Visibility="{Binding Path=Position, Converter={StaticResource PositionToVisibility}}"/>
                                     </DataTemplate>
@@ -171,19 +171,28 @@
                               RowHeight="22">
 
                         <DataGrid.Columns>
-                            <DataGridTextColumn Header="Order ID" Width="0.15*" MinWidth="80" Binding="{Binding Path=ID}" />
-                            <DataGridTextColumn Header="Symbol" Width="0.18*" MinWidth="60" Binding="{Binding Path=Security.Symbol}" />
-                            <DataGridTextColumn Header="Side" Width="0.15*" MinWidth="60" Binding="{Binding Path=Side}" />
-                            <DataGridTextColumn Header="Type" Width="0.15*" MinWidth="60" Binding="{Binding Path=Type}" />
-                            <DataGridTextColumn Header="Price" Width="0.18*" MinWidth="60" Binding="{Binding Path=Price}" HeaderStyle="{StaticResource RightAlignedColumnHeaderStyle}" CellStyle="{StaticResource RightAlignedCellStyle}"/>
-                            <DataGridTextColumn Header="Quantity" Width="0.2*" MinWidth="80" Binding="{Binding Path=Quantity}" HeaderStyle="{StaticResource RightAlignedColumnHeaderStyle}" CellStyle="{StaticResource RightAlignedCellStyle}"/>
-                            <DataGridTextColumn Header="Time" Width="0.36*" MinWidth="130" Binding="{Binding Path=Time}" />
-                            <DataGridTemplateColumn Header="Status" Width="0.3*" MinWidth="120" SortMemberPath="Status">
+                            <DataGridTextColumn Header="Order ID" Width="auto" MinWidth="80" Binding="{Binding Path=ID}" />
+                            <DataGridTextColumn Header="Symbol" Width="auto" MinWidth="60" Binding="{Binding Path=Security.Symbol}" />
+                            <DataGridTextColumn Header="Side" Width="auto" MinWidth="60" Binding="{Binding Path=Side}" />
+                            <DataGridTextColumn Header="Type" Width="auto" MinWidth="60" Binding="{Binding Path=Type}" />
+                            <DataGridTextColumn Header="Price" Width="auto" MinWidth="60" Binding="{Binding Path=Price}" HeaderStyle="{StaticResource RightAlignedColumnHeaderStyle}" CellStyle="{StaticResource RightAlignedCellStyle}"/>
+                            <DataGridTextColumn Header="Quantity" Width="auto" MinWidth="80" Binding="{Binding Path=Quantity}" HeaderStyle="{StaticResource RightAlignedColumnHeaderStyle}" CellStyle="{StaticResource RightAlignedCellStyle}"/>
+                            <DataGridTextColumn Header="Time" Width="auto" MinWidth="130" Binding="{Binding Path=Time}" />
+                            <DataGridTemplateColumn Header="Status" Width="auto" MinWidth="120" SortMemberPath="Status">
                                 <DataGridTemplateColumn.CellTemplate>
                                     <DataTemplate>
                                         <Border Padding="4,1,4,3" CornerRadius="3" Background="{Binding Status, Converter={StaticResource OrderStatusToBrush}}" HorizontalAlignment="Left" VerticalAlignment="Center">
                                             <TextBlock Text="{Binding Status}" Foreground="#EFFF" FontWeight="SemiBold" Typography.Capitals="AllSmallCaps" VerticalAlignment="Center" FontSize="12"/>
                                         </Border>
+                                    </DataTemplate>
+                                </DataGridTemplateColumn.CellTemplate>
+                            </DataGridTemplateColumn>
+                            <DataGridTemplateColumn Header="Actions" Width="80" MinWidth="80">
+                                <DataGridTemplateColumn.CellTemplate>
+                                    <DataTemplate>
+                                        <Button Content="CANCEL" Height="20" 
+                                                Command="{Binding DataContext.CancelOrderCommand, RelativeSource={RelativeSource AncestorType=DataGrid}}"
+                                                Visibility="{Binding Path=Status, Converter={StaticResource OrderStatusToVisibility}}"/>
                                     </DataTemplate>
                                 </DataGridTemplateColumn.CellTemplate>
                             </DataGridTemplateColumn>
