--- a/TradeHubGui/Views/StrategyRunnerView.xaml
+++ b/TradeHubGui/Views/StrategyRunnerView.xaml
@@ -156,11 +156,38 @@
                                   IsChecked="{Binding EnablePersistence, UpdateSourceTrigger=PropertyChanged}"
                                   Margin="10,4,10,0" VerticalAlignment="Center" HorizontalAlignment="Right"/>
                     </DockPanel>
+                    <DockPanel DockPanel.Dock="Bottom" Margin="10,0,0,0">
+                        <Button Focusable="False" Width="120" Margin="0,0,4,0" Height="22" DockPanel.Dock="Right"
+                                Command="{Binding StopMultipleInstanceCommand}" Visibility="{Binding}">
+                            <StackPanel Orientation="Horizontal">
+                                <Image Width="9" Height="9" Margin="0,0,6,0" Source="{StaticResource imgStop}" />
+                                <TextBlock Text="Stop Selected" />
+                            </StackPanel>
+                        </Button>
+                        <Button Focusable="False" Width="120" Margin="0,0,4,0" Height="22" DockPanel.Dock="Right"
+                                Command="{Binding RunMultipleInstanceCommand}"
+                                Visibility="{Binding}">
+                            <StackPanel Orientation="Horizontal">
+                                <Image Width="11" Height="11" Margin="0,0,4,0" Source="{StaticResource imgStart}" />
+                                <TextBlock Text="Start Selected" />
+                            </StackPanel>
+                        </Button>
+                        <Button Style="{StaticResource ButtonToolBar}" Focusable="False" ToolTip="Delete selected instances"
+                                IsEnabled="True" DockPanel.Dock="Right" Width="20" Height="22" HorizontalAlignment="Right"
+                                Command="{Binding DeleteMultipleInstanceCommand}" Margin="0,0,4,0">
+                            <Image Width="12" Height="12" Margin="2" Source="{StaticResource imgDelete}"
+                                    UseLayoutRounding="True" />
+                        </Button>
+
+                        <CheckBox DockPanel.Dock="Left" HorizontalAlignment="Left" Content="Select All Instances"
+                                  IsChecked="{Binding SelectAllInstances, UpdateSourceTrigger=PropertyChanged}"
+                                  Margin="4,0,0,0" VerticalAlignment="Center"/>
+                    </DockPanel>
 
                     <DataGrid x:Name="StrategyInstancesDataGrid" Margin="10"
                                     ItemsSource="{Binding Instances}"
                                     SelectedItem="{Binding SelectedInstance}"
-                                    SelectionMode="Single" 
+                                    SelectionMode="Extended" 
                                     IsTextSearchEnabled="True"
                                     IsSynchronizedWithCurrentItem="True"
                                     CanUserAddRows="False" CanUserDeleteRows="False"
@@ -168,7 +195,11 @@
                                     IsReadOnly="False"
                                     SelectionUnit="FullRow"
                                     AutoGenerateColumns="False">
-                        
+                        <DataGrid.Resources>
+                            <Style TargetType="DataGridRow">
+                                <Setter Property="IsSelected" Value="{Binding IsSelected}" />
+                            </Style>
+                        </DataGrid.Resources>
                         <DataGrid.Columns>
                             <DataGridTemplateColumn Width="32" IsReadOnly="True" CanUserResize="False">
                                 <DataGridTemplateColumn.CellTemplate>
@@ -334,11 +365,18 @@
                         <TextBlock Text="ORDERS" Style="{StaticResource SubHeaderTextBlockStyle}" Margin="0,0,6,0"/>
                         <TextBlock Text="{Binding Path=SelectedExecutionDetails.Key}" Style="{StaticResource SubHeaderTextBlockStyle}" FontWeight="SemiBold"/>
 
-                        <Button  MinWidth="75" IsEnabled="True" Focusable="False" Margin="0,0,0,0" HorizontalAlignment="Right" VerticalAlignment="Top"
-                        Command="{Binding ExportExecutionsCommand}">
+                        <Button MinWidth="75" IsEnabled="True" Focusable="False" Margin="0,0,0,0" HorizontalAlignment="Right" VerticalAlignment="Top"
+                                Command="{Binding ExportExecutionsCommand}" DockPanel.Dock="Right">
                             <StackPanel Orientation="Horizontal">
                                 <Image Width="14" Height="14" Margin="0,0,4,0" Source="{StaticResource imgExport}" />
                                 <TextBlock Text="Export" />
+                            </StackPanel>
+                        </Button>
+                        <Button MinWidth="75" IsEnabled="True" Focusable="False" Margin="0,0,6,0" HorizontalAlignment="Right" VerticalAlignment="Top"
+                                Command="{Binding ExportAllExecutionsCommand}" DockPanel.Dock="Right">
+                            <StackPanel Orientation="Horizontal">
+                                <Image Width="14" Height="14" Margin="0,0,4,0" Source="{StaticResource imgExport}" />
+                                <TextBlock Text="Export all Instances" />
                             </StackPanel>
                         </Button>
                     </DockPanel>
