--- a/TradeHubGui/Views/StrategySummary.xaml
+++ b/TradeHubGui/Views/StrategySummary.xaml
@@ -11,14 +11,25 @@
         <Border BorderThickness="1,1,1,0" BorderBrush="CadetBlue" DockPanel.Dock="Top">
             <DockPanel>
                 <StackPanel Orientation="Horizontal" HorizontalAlignment="Left">
-                    <TextBlock Text="Statistics" Margin="3" Style="{StaticResource SubHeaderTwoTextBlockStyle}" 
+                    <TextBlock Text="Statistics" Margin="3" Style="{StaticResource SubHeaderTextBlockStyle}" 
                                HorizontalAlignment="Left" VerticalAlignment="Center" DockPanel.Dock="Left"/>
                 </StackPanel>
                 <StackPanel Orientation="Horizontal" HorizontalAlignment="Right">
+                    
                     <Button Style="{StaticResource ButtonToolBar}" ToolTip="Clear current information" Command="{Binding ClearDataCommand}"
-                            Margin="3" Width="28" Height="28" HorizontalAlignment="Right" VerticalAlignment="Center">
+                            Margin="0,3,0,3" Width="28" Height="28" HorizontalAlignment="Right" VerticalAlignment="Center">
                         <Image Width="12" Height="12" Margin="2" Source="{StaticResource imgDelete}" UseLayoutRounding="True"/>
                     </Button>
+
+                    <Button ToolTip="Export current statistics" Command="{Binding ExportStatisticsCommand}"
+                            Margin="3" Width="75" Height="28" IsEnabled="True" Focusable="False" HorizontalAlignment="Right" VerticalAlignment="Top"
+                            DockPanel.Dock="Right">
+                        <StackPanel Orientation="Horizontal">
+                            <Image Width="14" Height="14" Margin="0,1,4,0" Source="{StaticResource imgExport}" />
+                            <TextBlock Text="Export" />
+                        </StackPanel>
+                    </Button>
+                    
                 </StackPanel>
             </DockPanel>
         </Border>
