--- a/TradeHubGui/Views/BruteOptimizationWindow.xaml
+++ b/TradeHubGui/Views/BruteOptimizationWindow.xaml
@@ -29,9 +29,9 @@
 * See the License for the specific language governing permissions and 
 * limitations under the License. 
 *****************************************************************************-->
-
-
-﻿<mah:MetroWindow x:Class="TradeHubGui.Views.BruteOptimizationWindow"
+    
+    
+<mah:MetroWindow x:Class="TradeHubGui.Views.BruteOptimizationWindow"
                 xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                 xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                 xmlns:mah="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
