--- a/TradeHubGui/Views/DataDownloaderView.xaml
+++ b/TradeHubGui/Views/DataDownloaderView.xaml
@@ -29,9 +29,9 @@
 * See the License for the specific language governing permissions and 
 * limitations under the License. 
 *****************************************************************************-->
-
-
-﻿<UserControl x:Class="TradeHubGui.Views.DataDownloaderView"
+    
+    
+<UserControl x:Class="TradeHubGui.Views.DataDownloaderView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:wpfToolkitExtended="clr-namespace:Xceed.Wpf.Toolkit;assembly=Xceed.Wpf.Toolkit"
