--- a/TradeHubGui/Views/OrdersView.xaml
+++ b/TradeHubGui/Views/OrdersView.xaml
@@ -29,9 +29,9 @@
 * See the License for the specific language governing permissions and 
 * limitations under the License. 
 *****************************************************************************-->
-
-
-﻿<UserControl x:Class="TradeHubGui.Views.OrdersView"
+    
+    
+<UserControl x:Class="TradeHubGui.Views.OrdersView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:conv="clr-namespace:TradeHubGui.Converters"
